# kryptos

./: .gitignore  Anchor.toml  LICENSE  README.md  SECURITY.txt  package-lock.json  package.json
app/: check-drop.ts  next.config.ts  package-lock.json  package.json
app/scripts/: create-drop.ts  kryptos_drop.json  kryptos_drop_idl.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/chat/: route.ts
app/src/app/api/sponsor-transaction/: route.ts
app/src/app/app/: page.tsx
app/src/app/docs/: page.tsx
app/src/app/drop/: layout.tsx
app/src/components/: TransactionHistory.tsx  navbar.tsx
app/src/components/rwa/: RWAChatMessages.tsx  RWADepositPreview.tsx  RWAInfoCard.tsx  RWAPortfolioView.tsx  RWAYieldCalculator.tsx  index.ts
app/src/lib/: agent.ts  dca.ts  idl.json  kryptos-contract.ts  kryptos-drop-sdk.ts  kryptos-drop.ts  kryptos-idl.ts  llm.ts  wallet-provider.tsx
app/src/lib/rwa/: calculator.ts  index.ts  types.ts  usdy.ts
app/src/providers/: KryptosDropPrivyProvider.tsx
keeper/: .env.example  package-lock.json  package.json
keeper/src/: config.ts  dca-executor.ts  force-execute-dca.ts  index.ts  intent-monitor.ts  jupiter.ts  logger.ts  price-oracle.ts  program.ts  test-dca.ts
programs/kryptos/: Cargo.toml
programs/kryptos/src/: errors.rs  events.rs  lib.rs
programs/kryptos/src/instructions/: close.rs  create_intent.rs  execute_dca.rs  execute_intent.rs  initialize_dca.rs  mod.rs  withdraw.rs
programs/kryptos/src/state/: dca_vault.rs  intent_vault.rs  mod.rs
tests/: kryptos-contracts.ts
(+1 files in other folders)
