[package]
name = "kryptos"
version = "0.1.0"
description = "KRYPTOS - Privacy-focused DCA and Intent execution on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kryptos"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
